--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  http: ^1.2.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
