--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.2.4 <4.0.0'
 
 dependencies:
+  animated_splash_screen: ^1.3.0
   blur: ^3.1.0
   carousel_slider: ^4.2.1
   flutter:
@@ -19,6 +20,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-assets:
-  - assets/images
+  assets:
+    - assets/images/
