--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -13,11 +13,19 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.0
+  page_transition: ^2.1.0
+  firebase_auth: ^4.17.8
+  firebase_storage: ^11.6.9
+  fluttertoast: ^8.2.4
+  cloud_firestore: ^4.15.8
+  firebase_core: ^2.27.0
+  google_sign_in: ^6.2.1
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
