--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^2.27.0
   google_sign_in: ^6.2.1
   font_awesome_flutter: ^10.7.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
