update login-register-reset password

--- a/huflix_movie_app/android/app/build.gradle
+++ b/huflix_movie_app/android/app/build.gradle
@@ -70,7 +70,11 @@ dependencies {
         implementation(platform("com.google.firebase:firebase-bom:32.7.4"))
 
         // When using the BoM, you don't specify versions in Firebase library dependencies
+            // When using the BoM, you don't specify versions in Firebase library dependencies
+        implementation("com.google.firebase:firebase-auth")
 
+        // Also add the dependency for the Google Play services library and specify its version
+        implementation("com.google.android.gms:play-services-auth:21.0.0")
         // Add the dependency for the Firebase SDK for Google Analytics
         implementation("com.google.firebase:firebase-analytics")
 }
