--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   intl: ^0.19.0
   infinite_scroll_pagination: ^4.0.0
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
