--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.19.0
   infinite_scroll_pagination: ^4.0.0
   youtube_player_flutter: ^8.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
