--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   youtube_player_flutter: ^8.0.0
   shared_preferences: ^2.2.2
+  path_provider: ^2.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
