--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   youtube_player_flutter: ^8.0.0
   shared_preferences: ^2.2.2
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
