--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.8.3
   loading_animation_widget: ^1.2.1
+  firebase_messaging: ^14.7.9
 
 dev_dependencies:
   flutter_test:
