--- a/huflix_movie_app/pubspec.yaml
+++ b/huflix_movie_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path: ^1.8.3
   loading_animation_widget: ^1.2.1
   firebase_messaging: ^14.7.9
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
